Removed URL constructors; they are deprecated.